--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,9 +1,9 @@
 .home {
   display: flex;
   flex-direction: column;
-}
 
-.home__body {
-  display: flex;
-  flex-grow: 1;
+  .home_body {
+    display: flex;
+    flex-grow: 1;
+  }
 }
