--- a/src/components/MainInfo/Header/Header.scss
+++ b/src/components/MainInfo/Header/Header.scss
@@ -2,28 +2,40 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
+
+  .header__right {
+    display: flex;
+    align-items: center;
+  }
+
+  .header__left {
+    flex: 0.5;
+    display: flex;
+    background-color: white;
+    padding: 10px;
+    border-radius: 30px;
+    color: gray;
+    align-items: center;
+  }
 }
 
-.header__right {
-  display: flex;
-  align-items: center;
-}
 
-.header__left {
-  flex: 0.5;
-  display: flex;
-  background-color: white;
-  padding: 10px;
-  border-radius: 30px;
-  color: gray;
-  align-items: center;
-}
+
 
 .header__left>input {
   border: none;
   width: 100%;
+
+  &:focus {
+    outline: none;
+  }
 }
+
+
 
 .header__right>h4 {
   margin-left: 10px;
+  margin-bottom: 10px;
+  text-transform: capitalize;
+  font-size: 16px;
 }
